fixed sign positioning and realigned everything to center of the screen

--- a/styles.css
+++ b/styles.css
@@ -7,85 +7,89 @@ body {
 .bg-img {
     background-image: url("./zodiac-signs-removebg-preview.png");
     width: 1000px;
-    height: 800px;
+    height: 850px;
     background-size: cover;
-    margin-left: 30rem;
-    margin-top: 7rem;
+    margin-left: 28rem;
+    margin-top: -8rem;
+}
+
+.sign-titles{
+position: relative;
+top: 18.5rem;   
+left: 1rem; 
+font-size: 18px;
 }
 
 .aries-title{
     color: rgb(204, 172, 93);
     margin-top: 15rem;
-    margin-left: 9rem;
-}
+    margin-left: 8rem;
 
-.aries-btn{
-    top: 15rem;
-    left: 9rem;
 }
 
 .taurus-title{
     color: rgb(204, 172, 93);
-    margin-top: -2.3rem;
+    margin-top: -3rem;
     margin-left: 23rem;
 }
 
 .gemini-title{
     color: rgb(204, 172, 93);
-    margin-top: -2.5rem;
-    margin-left: 37rem;
+    margin-top: -3rem;
+    margin-left: 38rem;
 }
 
 .cancer-title{
     color: rgb(204, 172, 93);
-    margin-top: -2.5rem;
-    margin-left: 51rem;
+    margin-top: -2.8rem;
+    margin-left: 52.5rem;
 }
 
 .capricorn-title{
     color: rgb(204, 172, 93);
-    margin-top: 11.9rem;
-    margin-left: 50rem;
+    margin-top: 12.5rem;
+    margin-left: 52rem;
 }
 
 .sag-title{
     color: rgb(204, 172, 93);
     margin-top: -2.5rem;
-    margin-left: 35rem;
+    margin-left: 37rem;
 }
 
 .scorpio-title{
     color: rgb(204, 172, 93);
-    margin-top: -2.5rem;
-    margin-left: 22.5rem;
+    margin-top: -3.3rem;
+    margin-left: 23rem;
 }
 
 .libra-title{
     color: rgb(204, 172, 93);
-    margin-top: -2.5rem;
+    margin-top: -3.3rem;
     margin-left: 9rem;
 }
 
 .leo-title{
     color: rgb(204, 172, 93);
-    margin-top: 13rem;
+    margin-top: 14rem;
     margin-left: 9rem;
 }
 
 .virgo-title{
     color: rgb(204, 172, 93);
-    margin-top: -2.5rem;
+    margin-top: -3rem;
     margin-left: 23rem;
 }
 
 .aquarius-title{
     color: rgb(204, 172, 93);
-    margin-top: -2.5rem;
-    margin-left: 36.5rem;
+    margin-top: -3rem;
+    margin-left: 38rem;
 }
 
 .pisces-title{
     color: rgb(204, 172, 93);
-    margin-top: -2.4rem;
-    margin-left: 51rem;
+    margin-top: -2.8rem;
+    margin-left: 53rem;
 }
+
